# project-wolf

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  ONBOARDING.md  PROGRESS.md  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
services/gateway/: pyproject.toml
services/gateway/app/: __init__.py
services/gateway/wolf_gateway/: __init__.py  main.py
services/orchestrator/: alembic.ini  pyproject.toml
services/orchestrator/app/: __main__.py  config.py  database.py  main.py  secrets_factory.py
services/orchestrator/app/agent/: __init__.py  events.py  loop.py  model_resolver.py  prompts.py  strategies.py
services/orchestrator/app/api/: auth.py  chat.py
services/orchestrator/app/audit/: log.py  models.py
services/orchestrator/app/auth/: local.py  middleware.py  oidc.py
services/orchestrator/app/caching/: __init__.py
services/orchestrator/app/grounding/: __init__.py  validator.py
services/orchestrator/app/guardrails/: __init__.py  limits.py  rate_limit.py
services/orchestrator/app/knowledge/: embeddings.py  models.py  store.py
services/orchestrator/app/management/: __init__.py  bootstrap_tenant.py  reembed.py  seed_dev_knowledge.py  set_secret.py  smoke_wazuh.py
services/orchestrator/app/models/: __init__.py  anthropic.py  interface.py  ollama.py  openai.py  registry.py
services/orchestrator/app/tenancy/: context.py  models.py
services/orchestrator/app/tools/: __init__.py  agents.py  alerts.py  base.py  cluster.py  dispatcher.py  knowledge.py  registration.py  registry.py  rules.py  timefmt.py
services/orchestrator/app/wazuh/: config.py  models.py  opensearch.py  query_builder.py  resolver.py  server_api.py
services/orchestrator/migrations/: env.py
services/orchestrator/migrations/versions/: 0001_initial_schema.py  0003_inject_tenant_filter.py  0005_knowledge_chunks_fts.py
services/orchestrator/tests/: conftest.py  test_agent_loop.py  test_auth.py  test_bootstrap_tenant_validation.py  test_cert_authority.py  test_cert_cli.py  test_chat_endpoint.py  test_cross_tenant_isolation.py  test_grounding_validator.py  test_guardrails.py  test_knowledge_store.py  test_launcher.py  test_loop_events.py  test_models.py  test_ollama_stream.py  test_search_alerts_agent_name.py  test_strategies.py  test_tenant_context.py  test_tenant_scoped_cache.py  test_tenants_endpoint.py  test_timefmt.py  test_tool_dispatcher.py  test_tool_summaries.py  test_wazuh_clients.py  test_wazuh_query_builder.py
services/server/: alembic.ini  pyproject.toml
services/server/migrations/: env.py
services/server/migrations/versions/: 0001_initial_schema.py  0002_tenant_wazuh_config.py  0004_knowledge_chunks.py  0005_knowledge_chunks_fts.py  0006_knowledge_chunks_embedding_v2.py  0007_rename_tenant_to_organization.py  0008_rename_approver_to_responder.py  0009_superuser_access_requests.py  0010_user_invite_verification.py  0011_wazuh_ecosystem_topology.py  0012_org_wazuh_agent_groups.py  0013_org_group_label_scoping.py  0014_drop_vestigial_org_wazuh_urls.py  0015_action_proposals.py  0016_action_proposal_reversal.py  0017_action_proposal_prior_state.py
services/server/tests/: conftest.py  test_action_proposals_list.py  test_active_response.py  test_agent_action_execution.py  test_agent_loop.py  test_auth.py  test_bootstrap_organization_validation.py  test_bootstrap_superuser.py  test_bootstrap_tenant_validation.py  test_cert_authority.py  test_cert_cli.py  test_chat_endpoint.py  test_cluster.py  test_config_change.py  test_config_change_execution.py  test_config_secret_key_guard.py  test_cross_organization_isolation.py  test_cross_tenant_isolation.py  test_embedding_bench.py  test_embedding_schema.py  test_embeddings.py  test_failover.py  test_gateway.py  test_grounding_validator.py  test_guardrails.py  test_knowledge_store.py  test_launcher.py  test_lifespan_db_retry.py  test_local_network.py  test_loop_events.py  test_models.py  test_mtls_middleware.py  test_ollama_stream.py  test_openrouter_adapter.py  test_org_header_context.py  test_organization_context.py  test_organization_scoped_cache.py  test_organizations_endpoint.py  test_probe.py  test_propose_active_response.py  (+34 more)
services/server/wolf_server/: __init__.py  __main__.py  config.py  database.py  main.py  secrets_factory.py
services/server/wolf_server/agent/: __init__.py  events.py  loop.py  model_resolver.py  prompts.py  strategies.py
services/server/wolf_server/api/: action_proposals.py  auth.py  chat.py  org_management.py  organizations.py  superuser.py  wazuh_credentials.py  wazuh_topology.py
services/server/wolf_server/audit/: log.py  models.py
services/server/wolf_server/auth/: blacklist.py  invite.py  local.py  middleware.py  mtls_middleware.py  oidc.py
services/server/wolf_server/bootstrap/: __init__.py  superuser.py
services/server/wolf_server/caching/: __init__.py  cache.py
services/server/wolf_server/gateway/: __init__.py  approval.py  execution.py  executors.py  models.py  proposals.py  reversal.py  scheduler.py  state_machine.py  validator.py
services/server/wolf_server/grounding/: __init__.py  validator.py
services/server/wolf_server/guardrails/: __init__.py  limits.py  rate_limit.py
services/server/wolf_server/knowledge/: __init__.py  embeddings.py  models.py  store.py
services/server/wolf_server/management/: __init__.py  bootstrap_organization.py  bootstrap_tenant.py  embedding_bench.py  embedding_schema.py  reembed.py  seed_dev_knowledge.py  set_secret.py  smoke_wazuh.py
services/server/wolf_server/models/: __init__.py  anthropic.py  failover.py  fallback.py  interface.py  ollama.py  openai.py  openrouter.py  quota.py  registry.py
services/server/wolf_server/network/: __init__.py  local_network.py
services/server/wolf_server/organization/: context.py  models.py  rbac.py  superuser_access.py
services/server/wolf_server/research/: __init__.py  context.py  crawl.py  extract.py  fetcher.py  interface.py  policy.py  registry.py  searxng.py  weburl.py
(+325 files in other folders)
