[project]
name = "wolf-gateway"
version = "0.1.0"
description = "Wolf Approval & Action Gateway — execute tools live ONLY here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "wolf-common",
]

[tool.uv.sources]
wolf-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
