[project]
name = "wolf-gateway"
version = "0.1.0"
description = "Wolf Approval & Action Gateway — execute tools live ONLY here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    # Direct floor (transitive via fastapi): starlette <1.3.1 has CVE-2026-54282
    # + CVE-2026-54283. Caught by the dep-audit CI gate; floor pinned by hand.
    "starlette>=1.3.1",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "wolf-common",
]

[tool.uv.sources]
wolf-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wolf_gateway"]
