[project]
name = "wolf-orchestrator"
version = "0.1.0"
description = "Wolf Agent Orchestrator — the core service"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic[email]>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pgvector>=0.3",
    "bcrypt>=4.0",
    "python-jose[cryptography]>=3.3",
    "httpx>=0.27",
    "authlib>=1.3",
    "wolf-common",
    "wolf-secrets",
    "wolf-schema",
    # Test deps
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "aiosqlite>=0.20",
]

[tool.uv.sources]
wolf-common = { workspace = true }
wolf-secrets = { workspace = true }
wolf-schema = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Add the project root so tests can import top-level `tools.*` packages
# (e.g. tools.model_probe used by test_probe.py).
pythonpath = ["../.."]
