[project]
name = "wolf-server"
version = "0.1.0"
description = "Wolf Server — the core agent-loop / API service (was wolf-orchestrator pre-Phase-5.5)"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    # Direct floor (transitive via fastapi): starlette <1.3.1 has CVE-2026-54282
    # (request.url authority confusion) + CVE-2026-54283 (urlencoded-form DoS).
    # Caught by the dep-audit CI gate; pin the floor by hand (uv lock follows).
    "starlette>=1.3.1",
    "uvicorn[standard]>=0.49.0",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0.50",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pgvector>=0.3",
    "bcrypt>=4.0",
    "python-jose[cryptography]>=3.5.0",
    "httpx>=0.27",
    "authlib>=1.3",
    # Session-blacklist Redis CLIENT (Phase 6.5-g). The redis SERVER is the
    # operator's own (never a .deb dependency); the in-memory backend is the
    # default and Redis activates only when REDIS_URL is set.
    "redis>=5.0",
    # NIC-CIDR enumeration for the same-network verification gate (Phase
    # 6.5-h.2). Pure-Python (no C ext), so it stays inside the lean-wheels
    # posture (ADR 0007) — preferred over psutil for this one read-only use.
    "ifaddr>=0.2",
    "wolf-common",
    "wolf-secrets",
    "wolf-schema",
    # Test deps
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    # httpx2 is starlette 1.x's preferred client for TestClient; without it
    # starlette emits a StarletteDeprecationWarning at TestClient import time.
    # Pinning it here is the canonical fix (rather than silencing the warning).
    "httpx2>=2.3",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
# Embedding-stack alternative — in-process via sentence-transformers + torch.
# Kept OPTIONAL so the default install set stays torch-free per ADR 0007's
# native-packaging constraints. Opt-in: `uv sync --extra embeddings-local`.
# Used when EMBEDDING_PROVIDER=sentence-transformers; the default is the
# Ollama-hosted adapter which has no extra Python deps.
embeddings-local = [
    "sentence-transformers>=3.0",
    "torch>=2.4",
]

[tool.uv.sources]
wolf-common = { workspace = true }
wolf-secrets = { workspace = true }
wolf-schema = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wolf_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Add the project root so tests can import top-level `tools.*` packages
# (e.g. tools.model_probe used by test_probe.py).
pythonpath = ["../.."]
